k8s/overlays/production/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
spec:
  rules:
  - host: "api.fk.wtf"
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: prod-api 
            port: 
              number: 80 
        path: /*
